# wechat-bot

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
wechatbot/: __init__.py  bot.py  chatgpt.py  logger.py  os_signals.py  settings.py
