[metadata]
name = wechatbot
url = https://github.com/amchii/whochat
version = attr: wechatbot.__version__
license = BSD 3-Clause License
author = amchii
author_email = finethankuandyou@gmail.com
description = A wechat bot using whochat
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    whochat
    redis
    pydantic[dotenv]
    requests


[flake8]
ignore = E203, E266, E402, E501, W503, W504, B950, F405, F403, C901
max-complexity = 50
select = B,C,E,F,W

[isort]
profile = black
skip = migrations
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
